--- a/visualization.ipynb
+++ b/visualization.ipynb
@@ -1877,7 +1877,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "deeplearning",
    "language": "python",
    "name": "python3"
   },
@@ -1891,7 +1891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.10"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
